Implement basic ForthEvaluator functionality
Added basic functionality to ForthEvaluator class. Imported necessary classes and implemented foundational methods like evaluateProgram, evaluateLine, evaluateToken, evaluateOperation, and isNumber. Focused on setting up a token parsing and validation framework with future commands and operations in mind. Implemented a stack mechanism to handle token processing. Future enhancements will add advanced capabilities to the operations.